# pydns

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  Makefile  README.rst  client.py  pyproject.toml  requirements-dev.txt
pydns/dns/: header.py  label_sequence.py  packet.py  query.py  question.py  record.py  response.py
pydns/shared/: protocols.py  utils.py
python_dns_client/: constants.py  decoder.py  dns_packet.py  dns_query.py  header.py  protocols.py  question.py  utils.py
python_dns_client/dns/: buffer.py  header.py  label_sequence.py  packet.py  query.py  question.py  record.py  response.py
python_dns_client/shared/: constants.py  utils.py
