[tool.poetry]
name = "python-dns-client"
version = "0.1.0"
description = ""
authors = ["Arslan <rslnkrmt2552@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^8.4.0"
dnslib = "^0.9.20"
bitstring = "^3.1.9"
isort = "^5.10.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
